increase padding on cta on lg

--- a/src/components/sections/shared/CTA.astro
+++ b/src/components/sections/shared/CTA.astro
@@ -9,7 +9,7 @@ import Button from '@/components/ui/buttons/Button.astro';
 <section class="w-full bg-gray-50">
 	<div class="content-container">
 		<div
-			class="content-wrapper px-6 py-8 sm:px-10 sm:py-10 bg-primary-500 rounded-lg md:px-10 lg:px-8 lg:py-12 2xl:px-20 2xl:py-[60px] relative overflow-hidden min-h-[280px] lg:min-h-[320px] xl:min-h-[420]"
+			class="content-wrapper px-6 py-8 sm:px-10 sm:py-10 bg-primary-500 rounded-lg md:px-10 lg:p-12 2xl:px-20 2xl:py-[60px] relative overflow-hidden min-h-[280px] lg:min-h-[320px] xl:min-h-[420]"
 		>
 			<div
 				class="flex flex-col lg:flex-row lg:items-center lg:justify-between h-full"
