remove link from services parent link

--- a/src/components/ui/navigation/Header.astro
+++ b/src/components/ui/navigation/Header.astro
@@ -20,19 +20,18 @@ const navLinks = [
 	},
 	{
 		name: 'services',
-		href: '/services',
 		childrenLinks: [
 			{
 				name: 'Web Development',
-				href: '/web-development',
+				href: '/services/web-development',
 			},
 			{
 				name: 'AI Automation',
-				href: '/ai-automation',
+				href: '/services/ai-automation',
 			},
 			{
 				name: 'Digital Marketing',
-				href: '/digital-marketing',
+				href: '/services/digital-marketing',
 			},
 		],
 	},
