refactor: update slot name to better deserve slot position

--- a/src/components/sections/shared/SubPageHero.astro
+++ b/src/components/sections/shared/SubPageHero.astro
@@ -84,7 +84,7 @@ const formStyle = formConfig[layout];
 					class="text-gray-100 wsl-text-lg"
 					set:html={description}
 				/>
-				<slot name="list-items" />
+				<slot name="after-description" />
 			</div>
 		</div>
 
