--- a/src/components/ui/navigation/Header.astro
+++ b/src/components/ui/navigation/Header.astro
@@ -22,16 +22,16 @@ const navLinks = [
 		name: 'services',
 		childrenLinks: [
 			{
-				name: 'Web Development',
-				href: '/services/web-development',
+				name: 'Website Development',
+				href: '/web-development',
 			},
 			{
 				name: 'AI Automation',
-				href: '/services/ai-automation',
+				href: '/ai-automation',
 			},
 			{
 				name: 'Digital Marketing',
-				href: '/services/digital-marketing',
+				href: '/digital-marketing',
 			},
 		],
 	},
