--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -45,7 +45,7 @@ const contactInfo: Contact[] = [
 		isContactPage={true}
 	>
 		<div
-			slot="list-items"
+			slot="after-description"
 			class="flex flex-col gap-1"
 		>
 			{
