--- a/src/components/ui/buttons/Button.astro
+++ b/src/components/ui/buttons/Button.astro
@@ -28,7 +28,7 @@ const colorClass = type === 'button' && buttonClasses[variation];
 {
 	type && type === 'button' ? (
 		<a
-			href={href}
+			href={'/schedule-call'}
 			class:list={[
 				'inline-flex items-center px-4 py-2.5 rounded-sm md:rounded-md md:px-6 md:py-3',
 				'text-black font-semibold wsl-text-lg',
