--- a/src/components/sections/shared/Benefits.astro
+++ b/src/components/sections/shared/Benefits.astro
@@ -6,6 +6,7 @@ type Benefit = {
 	description: string;
 	image: ImageMetadata;
 	imageAlt: string;
+	reverse?: boolean;
 };
 interface Props {
 	subtitle: string;
@@ -25,27 +26,27 @@ const {
 	class={`${backgroundColor}`}
 	data-reveal-group
 >
-	<div class="content-container flex flex-col gap-10 lg:gap-10 items-center">
+	<div class="content-container flex flex-col gap-16 lg:gap-24 items-center">
 		<!-- Section Header -->
 		<div class="text-left md:text-center">
 			<h3 class="subtitle text-primary-500 !font-semibold">{subtitle}</h3>
 			<h2 class="heading-l2 text-gray-100">{title}</h2>
 		</div>
-		<div class="flex flex-col gap-10">
-			{
-				benefits && (
-					<ul>
-						{benefits.map((benefit) => (
-							<BenefitCard
-								title={benefit.title}
-								description={benefit.description}
-								image={benefit.image}
-								imageAlt={benefit.imageAlt}
-							/>
-						))}
-					</ul>
-				)
-			}
-		</div>
+
+		{
+			benefits && (
+				<ul class="flex flex-col gap-12 md:gap-20 ">
+					{benefits.map((benefit) => (
+						<BenefitCard
+							title={benefit.title}
+							description={benefit.description}
+							image={benefit.image}
+							imageAlt={benefit.imageAlt}
+							reverse={benefit.reverse}
+						/>
+					))}
+				</ul>
+			)
+		}
 	</div>
 </section>
