--- a/src/pages/web-development.astro
+++ b/src/pages/web-development.astro
@@ -5,6 +5,7 @@ import Layout from '@/layouts/Layout.astro';
 import SubPageHero from '@/components/sections/shared/SubPageHero.astro';
 import ValueProposition from '@/components/sections/shared/ValueProposition.astro';
 import Benefits from '@/components/sections/shared/Benefits.astro';
+import ExtraServices from '@/components/sections/home/ExtraServices.astro';
 import Testimonials from '@/components/sections/shared/Testimonials.astro';
 import Portfolio from '@/components/sections/shared/Portfolio.astro';
 import CTA from '@/components/sections/shared/CTA.astro';
@@ -71,6 +72,7 @@ import TemporaryImage from '@/assets/tmp.avif';
 			},
 		]}
 	/>
+	<ExtraServices />
 	<Testimonials backgroundColor="bg-gray-50" />
 	<Portfolio />
 	<CTA />
